# libbpg

./: .gitignore  CMakeLists.txt  bpg.h  bpg_decoder.h  bpg_encoder.c  bpg_encoder.h  bpg_encoder_priv.h  bpgdec.c  bpgenc.c  bpgview.c  config.h  jctvc_glue.cpp  libbpg.c  x265_glue.c
libavcodec/: hevcdsp.c  videodsp.c
libavutil/: internal.h  mem.h
x265/source/: CMakeLists.txt
